v X.XX
~~~~~~~~~~~~~~~~
Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
Edit: Theorem EDYES, substantially shorten proof
Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
Typo: Theorem SMEZV, formatting error, second equation in Case 2 of proof (Matt Fergoda)
Typo: Exercises VS, group three cancellation exercises properly (Rachel Chaiser)
Typo: Solution EE.C19, correct two subscripts at the end (Matt Fergoda)
Typo: Theorem EIM, last line of proof need a zero vector (Matt Fergoda)
Typo: Exercise MR.T60, use correct linear transformation (Rachel Hirsch)
Typo: Section VR, "than" corrected to "then" (Rachel Chaiser)

v3.50 2015/12/30
~~~~~~~~~~~~~~~~
New: Exercise SSLE.C53, a 2x2 system from The Economist
New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
New: Exercises MR.T40, MR.T41, vector space of linear transformations (Chili Johnson)
Change: Annotated Acronyms, Chapter R, removed three obsolete items
Change: Exercise PD.M50, deleted, now obsolete
Change: Remove matrix inverse Archetype commentary for rectangular matrices
Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
Edit: Streamline half of proof of Theorem NPNT
Edit: Example FS1, clarified submatrices of extended echelon form (Chili Johnson)
Edit: Definition EEF, matrix M needed to be typeset as math (Jordan Fonseca)
Edit: Example FSAG, clarified two vectors are from spanning set (Chili Johnson)
Edit: Theorem SMEZV, additional justification in proof
Edit: Theorem SSLD, justifications in alternate proof (Chili Johnson)
Edit: Theorem AISM, added missing justification in proof (Jonathan Adams)
Edit: Improved justifications for eigenstuff proofs
Edit: Definition ELEM, fixed scalar multiple elementary matrix (Lukas Edman)