@@ -1421,11 +1421,17 @@ So we define,
 <exercise type="T" number="15" rough="Injective + equal dimensions, invertible">
 <problem contributor="robertbeezer">Suppose that $\ltdefn{T}{U}{V}$ is a surjective linear transformation and $\dimension{U}=\dimension{V}$.  Prove that $T$ is injective.
 </problem>
-<solution contributor="robertbeezer">If $T$ is surjective, then <acroref type="theorem" acro="RSLT" /> says $\rng{T}=V$, so $\rank{T}=\dimension{V}$ by <acroref type="definition" acro="ROLT" />.  In turn, the hypothesis gives $\rank{T}=\dimension{U}$.  Then, using <acroref type="theorem" acro="RPNDD" />,
-<equation>
-\nullity{T}=\left(\rank{T}+\nullity{T}\right)-\rank{T}=\dimension{U}-\dimension{U}=0
-</equation>
-With a null space of zero dimension, $\krn{T}=\set{\zerovector}$, and by <acroref type="theorem" acro="KILT" /> we see that $T$ is injective.  $T$ is both injective and surjective so by <acroref type="theorem" acro="ILTIS" />, $T$ is invertible.
+<solution contributor="robertbeezer">Consider that
+<alignmath>
+\nullity{T}
+<![CDATA[&=]]>\left(\rank{T}+\nullity{T}\right)-\rank{T}\\
+<![CDATA[&=]]>\dimension{U}-\rank{T}<![CDATA[&&]]><acroref type="theorem" acro="RPNDD" />\\
+<![CDATA[&=]]>\dimension{U}-\dimension{\rng{T}}<![CDATA[&&]]><acroref type="definition" acro="ROLT" />\\
+<![CDATA[&=]]>\dimension{U}-\dimension{V}<![CDATA[&&]]><acroref type="theorem" acro="RSLT" />\\
+<![CDATA[&=]]>\dimension{U}-\dimension{U}<![CDATA[&&]]>\text{Hypothesis}\\
+<![CDATA[&=]]>0
+</alignmath>
+With a null space of zero dimension, $\krn{T}=\set{\zerovector}$, and by <acroref type="theorem" acro="KILT" /> we see that $T$ is injective.  Thus $T$ is both injective and surjective, so by <acroref type="theorem" acro="ILTIS" />, $T$ is invertible.
 </solution>
 </exercise>
 
